# song-challenge

./: .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  pyproject.toml
accounts/migrations/: 0002_default_superuser.py
challenge-app/: next.config.js  package-lock.json  package.json
challenge-app-latest/: package-lock.json  package.json
challenge-app/src/: App.css  App.js
challenges/: admin.py  helpers.py  models.py  serializers.py  urls.py  views.py
challenges/migrations/: 0001_initial.py  0002_genre_is_active_tempo_is_active_and_more.py
django_project/: settings.py  urls.py
pages/: views.py
react-app/challenge-app/: package-lock.json
react-app/challenge-app/src/: App.css
static/: 404.html  about.html
templates/: _base.html
templates/challenges/: song-idea-partial.html  song-idea.html
templates/pages/: home.html
templates/web-app/: index.html
web-app/: README.md  app.css  next.config.js  package-lock.json  package.json
web-app/components/challengeButton/: challengeButton.jsx
web-app/components/challengeCard/: challengeCard.jsx
web-app/components/footer/: Footer.jsx
web-app/components/homePage/: homePage.jsx
web-app/components/navbar/: Navbar.jsx
web-app/pages/: _app.js  index.js
web-app/song-challenge/: README.md  pyproject.toml
web-app/song-challenge/challenges/: admin.py  models.py
web-app/song-challenge/challenges/migrations/: 0001_initial.py
web-app/song-challenge/django_project/: settings.py
web-app/styles/: globals.css
web-app/web-app/: jsconfig.json  package-lock.json  package.json  tailwind.config.js
(+34 files in other folders)
